<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityView">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="14dp"
        android:text="@string/author_data"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDiceResult" />

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="58dp"
        android:text="@string/title"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/diceAmmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/diceAmmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/dice_ammount_label"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/rdGroupDiceAmmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle" />

    <TextView
        android:id="@+id/diceAmmount2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_dice_label"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/spDado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

    <TextView
        android:id="@+id/tvDiceResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="93dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRolar" />

    <Spinner
        android:id="@+id/spDado"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRolar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdGroupDiceAmmount" />

    <Button
        android:id="@+id/btnRolar"
        android:layout_width="209dp"
        android:layout_height="0dp"
        android:layout_marginBottom="19dp"
        android:text="@string/button_text"
        app:layout_constraintBottom_toTopOf="@+id/tvDiceResult"
        app:layout_constraintEnd_toStartOf="@+id/tvDiceResult"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toStartOf="@+id/tvDiceResult"
        app:layout_constraintTop_toBottomOf="@+id/spDado" />

    <RadioGroup
        android:id="@+id/rdGroupDiceAmmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/spDado"
        app:layout_constraintEnd_toEndOf="@+id/diceAmmount"
        app:layout_constraintStart_toStartOf="@+id/diceAmmount"
        app:layout_constraintTop_toBottomOf="@+id/diceAmmount">

        <RadioButton
            android:id="@+id/rbOneDice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:text="@string/n1" />

        <RadioButton
            android:id="@+id/rbTwoDice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n2" />

        <RadioButton
            android:id="@+id/rbThreeDice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n3" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>